# pycraft

./: .gitignore  AGENTS.md  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
slots/: README.md
specs/001-ursina-craft/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ursina-craft/contracts/: openapi.yaml
src/pycraft/: app.py
src/pycraft/cli/: pycraft.py
src/pycraft/gameplay/: controller.py
src/pycraft/physics/: movement.py
src/pycraft/world/: generator.py
tests/: conftest.py
tests/integration/: test_cli_play.py
tests/unit/: test_movement.py  test_world_generation.py
